<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
{
    Schema::create('dentistas', function (Blueprint $table) {
        $table->id();

        $table->string('nombre');

        $table->string('apellido_paterno');

        $table->string('apellido_materno')
            ->nullable();

        $table->string('especialidad');

        $table->string('cedula_profesional')
            ->unique();

        $table->string('telefono');

        $table->string('correo')
            ->unique();

        $table->time('horario_inicio');

        $table->time('horario_fin');

        $table->string('consultorio');

        $table->timestamps();
    });
}

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('dentistas');
    }
};
