<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
{
    Schema::create('inventarios', function (Blueprint $table) {
        $table->id();

        $table->string('nombre');

        $table->string('categoria');

        $table->integer('cantidad');

        $table->integer('stock_minimo');

        $table->date('fecha_caducidad')->nullable();

        $table->string('proveedor')->nullable();

        $table->decimal('precio_unitario', 10, 2)->default(0);

        $table->timestamps();
    });
}
    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('inventarios');
    }
};
